# pfapack

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  RELEASE.md  meson.build  meson.options  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.yml  main.yml  pre-commit.yaml  pytest.yml  pythonpublish.yml
docs/: .gitignore  conf.py  index.md  index.rst
examples/: test_execution_speed.py  test_superbatch.py  time_all.py
original_source/: LapackLicence  README.txt
original_source/c_interface/: README.txt  commondefs.h  fortran.h  fortran_pfapack.h  makefile  skbpf10.c  skbpfa.c  skpfa.c  sktrf.c
original_source/c_interface/EXAMPLES/: README.txt  example1_c++.cc  example1_c.c  example1_c99.c  example1_f77.cc  example2_c.c  example3_c.c  example3_f77.cc  example4_c.c  example5_c.c  example6_c.c  makefile
original_source/c_interface/TESTING/: README.txt  check.f90  check.h  makefile  test.c
original_source/fortran/: clasktrd.f  clasktrf.f  cskbpf10.f  cskbtrd.f  cskr2.f  cskr2k.f  csktd2.f  csktf2.f  csktrf.f  dlasktrd.f  dlasktrf.f  dskbpf10.f  dskpfa.f  dsktd2.f  f77_interface.f90  f95_interface.f90  message.f90  mul10.f  precision.f90  skbpf10.f90  skbpfa.f90  skbtrd.f90  skpf10.f90  sktd2.f90  sktf2.f90  sktrf.f90  slasktrd.f  slasktrf.f  sskbpf10.f  sskbpfa.f  sskmv.f  sskpf10.f  sskpfa.f  sskr2.f  sskr2k.f  ssktf2.f  ssktrd.f  ssktrf.f  zskbpf10.f  zskpf10.f  (+2 more)
original_source/fortran/EXAMPLES/: README.txt  example1.f  example1_ws.f  example2.f90  example3.f90  example4.f90  example4_upper.f90  example5.f90  example6.f90  example7.f90  makefile  print_mat.f90
original_source/fortran/TESTING/: README.TXT  check_decomp.f90  check_decomp_c.f90  check_decomp_d.f90  check_decomp_s.f90  check_decomp_z.f90  check_pfaffian.f90  check_pfaffian_c.f90  check_pfaffian_d.f90  check_pfaffian_s.f90  check_pfaffian_z.f90  error.f90  makefile  matrix_tools.f90  matrix_tools_c.f90  matrix_tools_d.f90  matrix_tools_s.f90  matrix_tools_z.f90  test_ilaenv.f  test_pfaff.f90  test_skew.f90
original_source/mathematica/: README.txt  pfaffian.nb
original_source/matlab/: README.txt  pfaffian_LTL.m  pfaffian_hessenberg.m  pfaffian_householder.m  skew_LTL.m  skew_tridiagonalize.m  test_pfaffian.m  test_pfaffian_complex.m  test_pfaffian_real.m
original_source/python/: README.txt  pfaffian.py  test_pfaffian.py
pfapack/: __init__.py  _version.py  ctypes.py  exceptions.py  pfaffian.py  pfaffian_cy.pyx
tests/: conftest.py  int_mat_tests.py  test_ctypes_detailed.py  test_int_mats.py  test_pfaffian.py  test_pfaffian_cy.py
